--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 /IaC/terraform.tfstate
 /IaC/terraform/.terraform
 /IaC/terraform/plan
-/IaC/terraform/terraform.lock.hcl
+.terraform.lock.hcl
 /IaC/terraform/terraform.tfstate
 /IaC/terraform/terraform.tfstate.backup
-
+/function/package
+.gitignore
